specs/grammar-tests/negative/wrong-typed-headers.lace
get("$x", { headers: "this should be an object" }).expect(status: 200)
